Fix height of scrollbar container in elementToolbarComponent

--- a/src/components/project/elementToolbar/ElementToolbarComponent.css
+++ b/src/components/project/elementToolbar/ElementToolbarComponent.css
@@ -3,7 +3,7 @@
     top: calc(50vh - 250px);
     left: 40%;
     right: 8px;
-    background-color: #ffffffaa;
+    background-color: #ffffff;
     border: 1px solid black;
     width: 250px;
     height: 500px;
@@ -16,10 +16,11 @@
 }
 
 .toolbar-scrollable {
-    height: calc(100% - 130px);
+    height: calc(100% - 160px);
     padding: 10px;
 }
 .actions-container {
+    height: 140px;
     padding: 10px;
 }
 .actions-button {
@@ -55,6 +56,11 @@
     display: inline-block;
     width: 100px;
     text-align: center;
+}
+
+.toolbar-toolbar {
+    height: 25px;
+    background-color: #4A3E9D;
 }
 
 .close-toolbar-button {
